Rephrase package removed

--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1106,13 +1106,13 @@ package_headless_added:
 package_headless_updated:
   other: "Package updated: [NOTICE]{{.V0}}[/RESET]"
 package_headless_removed:
-  other: "Package removed: [NOTICE]{{.V0}}[/RESET]"
+  other: "Package uninstalled: [NOTICE]{{.V0}}[/RESET]"
 err_package_removed:
   other: Failed to remove package
 err_packages_removed:
   other: Failed to remove packages
 package_removed:
-  other: "Package removed: [NOTICE]{{.V0}}[/RESET]"
+  other: "Package uninstalled: [NOTICE]{{.V0}}[/RESET]"
 update_config:
   other: To ensure your local project is synchronized with the ActiveState platform please use `[ACTIONABLE]state pull[/RESET]`
 package_update_config_file:
