--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -248,7 +248,7 @@ organizations_description:
 organizations_err:
   other: Unable to list member organizations
 organizations_unknown_tier:
-  other: Unknown tier `[NOTICE]{{.Tier}}[/RESET]` in organization `[NOTICE]{{.Organization}}[/RESET]`
+  other: "Unknown tier [NOTICE]\"{{.Tier}}\"[/RESET] in organization [NOTICE]\"{{.Organization}}\"[/RESET]"
 organization_name:
   other: Organization Name
 organization_no_orgs:
@@ -290,7 +290,7 @@ err_language_not_found:
 error_state_activate_copy_save:
   other: Error saving project file
 error_state_activate_new_no_commit_aborted:
-  other: "Platform project created but cannot activate.  Try `[ACTIONABLE]state activate {{.Owner}}/{{.ProjectName}}[/RESET]`."
+  other: "Platform project created but cannot activate.  Try [ACTIONABLE]`state activate {{.Owner}}/{{.ProjectName}}`[/RESET]."
 state_activate_new_prompt_owner:
   other: "Please provide an owner for the new project:"
 error_state_activate_new_fetch_organizations:
@@ -298,7 +298,7 @@ error_state_activate_new_fetch_organizations:
 state_activate_new_created:
   other: Created new project in [NOTICE]{{.Dir}}[/RESET]
 state_activate_new_platform_project:
-  other: New platform project successfully created as [NOTICE]{{.Owner}}/{{.Project}}[/RESET]. To activate your new project run `[ACTIONABLE]state activate {{.Owner}}/{{.Project}}[/RESET]`
+  other: New platform project successfully created as [NOTICE]{{.Owner}}/{{.Project}}[/RESET]. To activate your new project run [ACTIONABLE]`state activate {{.Owner}}/{{.Project}}`[/RESET]
 state_activate_new_prompt_language:
   other: Which language would you like to use to manage your State Tool scripts?
 state_activate_new_language_none:
@@ -330,7 +330,7 @@ projects_description:
 projects_list_description:
   other: List your platform projects
 err_api_not_authenticated:
-  other: You are not authenticated, authenticate with `[ACTIONABLE]state auth[/RESET]`.
+  other: You are not authenticated, authenticate with [ACTIONABLE]`state auth`[/RESET].
 err_api_forbidden:
   other: You are not allowed to access or modify the requested resource
 err_api_org_not_found:
@@ -408,7 +408,7 @@ error_state_run_undefined_name:
 error_state_run_unknown_name:
   other: The script '[NOTICE]{{.V0}}[/RESET]' is not defined in activestate.yaml.
 info_state_run_activating_state:
-  other: "Setting up virtual environment. To run this script outside of a virtual environment add `[ACTIONABLE]standalone: true[/RESET]` to the script in your [NOTICE]activestate.yaml[/RESET]."
+  other: "Setting up virtual environment. To run this script outside of a virtual environment add [ACTIONABLE]`standalone: true`[/RESET] to the script in your [NOTICE]activestate.yaml[/RESET]."
 error_state_run_activate:
   other: Unable to activate a state for running the script in. Try manually running "state activate" first.
 error_state_run_standalone_conflict:
@@ -593,9 +593,9 @@ secrets_err_no_publickey_found:
 secrets_err_check_access:
   other: Access check failed
 secrets_expand_err_undefined:
-  other: "Secret `[NOTICE]{{.V0}}[/RESET]` not defined in project"
+  other: "Secret [NOTICE]\"{{.V0}}\"[/RESET] not defined in project"
 secrets_expand_err_not_found:
-  other: "Unable to obtain value for secret: `[NOTICE]{{.V0}}[/RESET].`"
+  other: "Unable to obtain value for secret: [NOTICE]\"{{.V0}}\"[/RESET]."
 secrets_expand_err_no_access:
   other: You are not a member of organization '[NOTICE]{{.V0}}[/RESET]' and therefore cannot access secrets belonging to its projects
 secrets_err_invalid_store:
@@ -659,11 +659,11 @@ keypair_err_not_found:
 keypair_err_save:
   other: Keypair could not be saved
 keypair_err_publickey_not_found:
-  other: No public-key found for user `[NOTICE]{{.V0}}[/RESET]` ([NOTICE]{{.V1}}[/RESET])
+  other: "No public-key found for user [NOTICE]\"{{.V0}}\"[/RESET] ([NOTICE]\"{{.V1}}\"[/RESET])"
 keypair_err_passphrase_prompt:
   other: The provided passphrase is invalid
 keypair_err_require_auth:
-  other: You need to be authenticated to run this command, please run `[ACTIONABLE]state auth[/RESET]` first
+  other: You need to be authenticated to run this command, please run [ACTIONABLE]`state auth`[/RESET] first
 keypairs_err_bitlength_too_short:
   other: bit-length too short
 keypairs_err_pem_encoding:
@@ -675,7 +675,7 @@ keypairs_err_invalid_rsa_publickey:
 keypairs_err_load_not_found:
   other: Authorized keypair not found
 keypairs_err_load_requires_mode:
-  other: "Keypair `[NOTICE]{{.V0}}[/RESET]` file is too permissive, expects no more than `[NOTICE]{{.V1}}[/RESET]` permissions"
+  other: "Keypair [NOTICE]\"{{.V0}}\"[/RESET] file is too permissive, expects no more than [NOTICE]\"{{.V1}}\"[/RESET] permissions"
 keypairs_err_base64_decoding:
   other: Message is not base-64 encoded
 keypairs_err_override_with_save:
@@ -683,16 +683,16 @@ keypairs_err_override_with_save:
 keypairs_err_override_with_delete:
   other: "cannot delete key file while key override is set"
 err_command_requires_auth:
-  other: You need to be authenticated to run this command. Authenticate by running `[ACTIONABLE]state auth[/RESET]`.
+  other: You need to be authenticated to run this command. Authenticate by running [ACTIONABLE]`state auth`[/RESET].
 warn_script_name_in_use:
   other: |
     The following scripts should be renamed:
 
       [DISABLED]-[/RESET] {{.V0}}
 
-    These scripts were not aliased during activation but can still be run using `[ACTIONABLE]state run[/RESET]`, eg. `[ACTIONABLE]state run {{.V1}}[/RESET]`.
+    These scripts were not aliased during activation but can still be run using [ACTIONABLE]`state run`[/RESET], eg. [ACTIONABLE]`state run {{.V1}}`[/RESET].
 
-    Note that you can also access scripts by prefixing their script with your project name, eg. `[ACTIONABLE]{{.V2}}[/RESET]`
+    Note that you can also access scripts by prefixing their script with your project name, eg. [ACTIONABLE]`{{.V2}}`[/RESET]
 
 warn_move_incompatible_modes:
   other: "Permissions of files [NOTICE]{{.V0}}[/RESET] and [NOTICE]{{.V1}}[/RESET] differ. Using permissions of [NOTICE]{{.V0}}[/RESET]"
@@ -727,13 +727,13 @@ update_available:
     Your version: [NOTICE]{{.V0}}[/RESET]
     Available Version: [NOTICE]{{.V1}}[/RESET]
 
-    You can update by running `[ACTIONABLE]state update[/RESET]`
+    You can update by running [ACTIONABLE]`state update`[/RESET]
 runtime_update_notice_known_count:
   other: "Your activestate.yaml is [NOTICE]{{.V0}}[/RESET] commits behind."
 runtime_update_notice_unknown_count:
   other: "Your activestate.yaml is behind."
 runtime_update_help:
-  other: "Run `[ACTIONABLE]state pull[/RESET]` to pull in the latest runtime environment as defined in your project on [NOTICE]https://platform.activestate.com/{{.V0}}/{{.V1}}[/RESET]"
+  other: "Run [ACTIONABLE]`state pull`[/RESET] to pull in the latest runtime environment as defined in your project on [NOTICE]https://platform.activestate.com/{{.V0}}/{{.V1}}[/RESET]"
 err_no_credentials:
   other: Cannot authenticate without credentials
 err_token_list:
@@ -862,7 +862,7 @@ warn_deprecation:
     Reason for deprecation: 
       [NOTICE]{{.V1}}[/RESET]
 
-    Please update by running `[ACTIONABLE]state update[/RESET]`.
+    Please update by running [ACTIONABLE]`state update`[/RESET].
 err_deprecation:
   other: |
     You are running a version of the State Tool that is no longer supported! You will be encountering issues.
@@ -870,7 +870,7 @@ err_deprecation:
     Reason for deprecation: 
       [NOTICE]{{.V1}}[/RESET]
 
-    Please update by running `[ACTIONABLE]state update[/RESET]`.
+    Please update by running [ACTIONABLE]`state update`[/RESET].
 err_auth_required:
   other: Authentication is required, please authenticate by running 'state auth'
 auth_required_activate:
@@ -982,7 +982,7 @@ err_deprection_404:
 err_deprection_code:
   other: Could not check for deprecation as the service returned a code [NOTICE]{{.V0}}[/RESET]
 err_set_commit_id:
-  other: "Could not update your activestate.yaml with the latest commit ID. Please ensure you have your project defined in the format of `[ACTIONABLE]project: https://platform.activestate.com/Owner/ProjectName[/RESET]`"
+  other: "Could not update your activestate.yaml with the latest commit ID. Please ensure you have your project defined in the format of [ACTIONABLE]`project: https://platform.activestate.com/Owner/ProjectName`[/RESET]"
 err_unauthorized:
   other: You are not authorized, did you provide valid login credentials?
 err_projectfile_exists:
@@ -1148,9 +1148,9 @@ package_removed:
 bundle_removed:
   other: "Bundle uninstalled: [NOTICE]{{.V0}}[/RESET]"
 update_config:
-  other: To ensure your local project is synchronized with the ActiveState platform please use `[ACTIONABLE]state pull[/RESET]`
+  other: To ensure your local project is synchronized with the ActiveState platform please use [ACTIONABLE]`state pull`[/RESET]
 package_update_config_file:
-  other: To ensure your local project is synchronized with the ActiveState platform please use `[ACTIONABLE]state pull[/RESET]`
+  other: To ensure your local project is synchronized with the ActiveState platform please use [ACTIONABLE]`state pull`[/RESET]
 inventory_ingredient_not_available:
   other: The package '[NOTICE]{{.V0}}[/RESET]' is not available on the ActiveState Platform, or does not have a matching version
 command_flag_no_such_flag:
@@ -1182,8 +1182,8 @@ err_init_file_exists:
 init_success:
   other: |
     Project '[NOTICE]{{.V0}}/{{.V1}}[/RESET]' has been successfully initialized at '[NOTICE]{{.V2}}[/RESET]'.
-    You should run `[ACTIONABLE]state push[/RESET]` before activating your project for the first time.
-    Once pushed you can activate your project with `[ACTIONABLE]state activate[/RESET]`.
+    You should run [ACTIONABLE]`state push`[/RESET] before activating your project for the first time.
+    Once pushed you can activate your project with [ACTIONABLE]`state activate`[/RESET].
 flag_state_init_skeleton_description:
   other: "The activestate.yaml template to use with project file creation. Accepts: {{.V0}}"
 arg_state_init_namespace:
@@ -1281,7 +1281,7 @@ history_cmd_description:
 arg_state_history_namespace_description:
   other: "The namespace to view the history for (owner/name)"
 err_history_namespace:
-  other: "Please provide a namespace or run `[ACTIONABLE]state history[/RESET]` in a project directory"
+  other: "Please provide a namespace or run [ACTIONABLE]`state history`[/RESET] in a project directory"
 clean_description:
   other: Clean caches, configuration files, or completely remove the state tool
 uninstall_description:
@@ -1440,7 +1440,7 @@ err_arg_required:
 err_init_no_language:
   other: "You need to supply the [NOTICE]language[/RESET] argument, run '[ACTIONABLE]state init --help[/RESET]' for more information."
 err_project_no_commit:
-  other: The activatestate.yaml for the project '[NOTICE]{{.V0}}[/RESET]' does not contain a commit ID. If this project was created with '[NOTICE]state init[/RESET]', please run `[ACTIONABLE]state push[/RESET]` and try again.
+  other: The activatestate.yaml for the project '[NOTICE]{{.V0}}[/RESET]' does not contain a commit ID. If this project was created with '[NOTICE]state init[/RESET]', please run [ACTIONABLE]`state push`[/RESET] and try again.
 err_bad_platform_version:
   other: You have to supply a platform version.
 platform_added:
@@ -1480,23 +1480,23 @@ ppm_print_main:
     See [ACTIONABLE]https://docs.activestate.com/platform/state/[/RESET] for details.
 ppm_print_forward:
   other: |
-    Your command is being forwarded to `[ACTIONABLE]{{.V0}}[/RESET]`.
-    In the future you can run `[ACTIONABLE]{{.V0}}[/RESET]` directly instead of running `[ACTIONABLE]{{.V1}}[/RESET]`, which will soon be deprecated.
+    Your command is being forwarded to [ACTIONABLE]`{{.V0}}`[/RESET].
+    In the future you can run [ACTIONABLE]`{{.V0}}`[/RESET] directly instead of running [ACTIONABLE]`{{.V1}}`[/RESET], which will soon be deprecated.
 ppm_print_forward_after_convert:
   other: |
-    Please navigate to your newly created project directory and run `[ACTIONABLE]{{.V1}}[/RESET]` again.
-    You can also run `[ACTIONABLE]{{.V0}}[/RESET]` directly instead of running `[ACTIONABLE]{{.V1}}[/RESET]`, which will soon be deprecated.
+    Please navigate to your newly created project directory and run [ACTIONABLE]`{{.V1}}`[/RESET] again.
+    You can also run [ACTIONABLE]`{{.V0}}`[/RESET] directly instead of running [ACTIONABLE]`{{.V1}}`[/RESET], which will soon be deprecated.
 ppm_print_forward_failure:
   other: |
-    Your command is being forwarded to `[ACTIONABLE]{{.V0}}[/RESET]`.
-    In the future you can run `[ACTIONABLE]{{.V0}}[/RESET]` directly instead of running `[ACTIONABLE]{{.V1}}[/RESET]`, which will soon be deprecated.
+    Your command is being forwarded to [ACTIONABLE]`{{.V0}}`[/RESET].
+    In the future you can run [ACTIONABLE]`{{.V0}}`[/RESET] directly instead of running [ACTIONABLE]`{{.V1}}`[/RESET], which will soon be deprecated.
 
-    Note that `[ACTIONABLE]{{.V0}}[/RESET]` is not a direct analog for `[ACTIONABLE]{{.V1}}[/RESET]` and your command may have failed as a result.
-    Please run `[ACTIONABLE]{{.V0}} --help[/RESET]` for further information on how to use it for your use-case.
+    Note that [ACTIONABLE]`{{.V0}}`[/RESET] is not a direct analog for [ACTIONABLE]`{{.V1}}`[/RESET] and your command may have failed as a result.
+    Please run [ACTIONABLE]`{{.V0}} --help`[/RESET] for further information on how to use it for your use-case.
 ppm_print_area_redundant:
   other: |
     `ppm area` and its subcommands have been made redundant thanks to State Tool's use of virtual environments.
-    You can simply start managing your packages, run `[ACTIONABLE]{{.V0}} --help[/RESET]` for more information.
+    You can simply start managing your packages, run [ACTIONABLE]`{{.V0}} --help`[/RESET] for more information.
 ppm_install_intent:
   other: add new packages to your project 
 ppm_upgrade_intent:
@@ -1540,17 +1540,17 @@ tutorial_newproject_intro:
     set up shared scripts, and much more.
     [[BR]][[BR]]
     We'll help you create your first virtual environment, after that you can create as many as you want by running
-    `[ACTIONABLE]state init[/RESET]`.
+    [ACTIONABLE]`state init`[/RESET].
     [[BR]]
 tutorial_newproject_outro:
   other: |
     Your Virtual Runtime Environment has been created.
     [[BR]][[BR]]
-    To start using your project simply run `[ACTIONABLE]state activate[/RESET]` from your project directory at [ACTIONABLE]{{.Dir}}[/RESET].
+    To start using your project simply run [ACTIONABLE]`state activate`[/RESET] from your project directory at [ACTIONABLE]{{.Dir}}[/RESET].
     You can also manage your project in your browser at [ACTIONABLE]{{.URL}}[/RESET].
     [[BR]][[BR]]
-    To create another project run `[ACTIONABLE]state init[/RESET]`, or if you want to find out more about the State Tool and what it can do
-    run `[ACTIONABLE]state --help[/RESET]` or check out [ACTIONABLE]{{.Docs}}[/RESET]
+    To create another project run [ACTIONABLE]`state init`[/RESET], or if you want to find out more about the State Tool and what it can do
+    run [ACTIONABLE]`state --help`[/RESET] or check out [ACTIONABLE]{{.Docs}}[/RESET]
 ppm_convert_after_tutorial:
   other: |
     For your convenience you can continue to use ppm commands once you've activated your virtual runtime environment.
@@ -1571,8 +1571,8 @@ ppm_convert_ask_feedback:
     We understand your need to do things traditionally, but we currently do not support it. We'd love to hear more about
     your use case to see if we can better meet your needs. Please consider posting to our forum at {{.ForumURL}}.
     [[BR]]
-    To create another project run `[ACTIONABLE]state init[/RESET]`, or if you want to find out more about the State Tool and what it can do
-    run `[ACTIONABLE]state --help[/RESET]` or check out [ACTIONABLE]{{.Docs}}[/RESET]
+    To create another project run [ACTIONABLE]`state init`[/RESET], or if you want to find out more about the State Tool and what it can do
+    run [ACTIONABLE]`state --help`[/RESET] or check out [ACTIONABLE]{{.Docs}}[/RESET]
 windows_compatibility_warning:
   other: |
     Warning: State Tool is untested on Windows versions below 10. If you encounter issues please consider reporting them on {{.V0}}
@@ -1595,21 +1595,21 @@ artifact_succeeded:
 artifact_failed:
   other: "Failed: [NOTICE]{{.V0}}[/RESET]. Error returned: [ERROR]{{.V1}}[/RESET]"
 prepare_instructions_lin_mac:
-  other: "To add the global installations directory to your environment please add the line `[ACTIONABLE]export PATH={{.V0}}:$PATH[/RESET]` to your RC file"
+  other: "To add the global installations directory to your environment please add the line [ACTIONABLE]`export PATH={{.V0}}:$PATH`[/RESET] to your RC file"
 prepare_instructions_windows:
-  other: "To add the global installations directory to your environment please add the path `[ACTIONABLE]{{.V0}}[/RESET]` to your user PATH in the System Properties dialog"
+  other: "To add the global installations directory to your environment please add the path [ACTIONABLE]`{{.V0}}`[/RESET] to your user PATH in the System Properties dialog"
 prepare_env_warning:
   other: Could not update user environment
 prompt_headless_anonymous:
-  other: You're about to add packages as an anonymous user, you might want to authenticate first using `[ACTIONABLE]state auth[/RESET]` if you already have an account. Do you want to continue as an anonymous user?
+  other: You're about to add packages as an anonymous user, you might want to authenticate first using [ACTIONABLE]`state auth`[/RESET] if you already have an account. Do you want to continue as an anonymous user?
 err_package_update_pjfile:
-  other: "Could not update your activestate.yaml with the new commit ID. Please run `[ACTIONABLE]state pull[/RESET]` manually."
+  other: "Could not update your activestate.yaml with the new commit ID. Please run [ACTIONABLE]`state pull`[/RESET] manually."
 prepare_protocol_warning:
   other: Could not add state protocol
 confirm:
   other: Please Confirm
 err_no_project:
-  other: To run this command you need to be in an existing project. You can create a new project with [ACTIONABLE]state init[/RESET] or run this command from a directory that is in an existing project. You can also mark a project as the default to use by running `[ACTIONABLE]state activate --default[/RESET]` inside your project directory.
+  other: To run this command you need to be in an existing project. You can create a new project with [ACTIONABLE]state init[/RESET] or run this command from a directory that is in an existing project. You can also mark a project as the default to use by running [ACTIONABLE]`state activate --default`[/RESET] inside your project directory.
 activate_default_prompt:
   other: |
     Would you like to make [NOTICE]{{.V0}}[/RESET] your default project?
