--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1617,3 +1617,5 @@ activate_default_prompt:
     This will allow you to operate on your project and run executables provided by its runtime without first "activating" it.
 err_no_projectfile:
   other: No activestate.yaml file exists in the current working directory or its parent directories.
+err_read_projectfile:
+  other: The activestate.yaml at {{.V0}} could not be read.
