--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1617,3 +1617,5 @@ err_no_projectfile:
   other: No activestate.yaml file exists in the current working directory or its parent directories.
 err_read_projectfile:
   other: The activestate.yaml at {{.V0}} could not be read.
+err_auth_fail_totp:
+  other: A two-factor authentication code is required.
