--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1627,3 +1627,5 @@ package_ingredient_alternatives_more:
   other: " - .. (to see more results run `state search {{.V0}}`)"
 bundle_ingredient_alternatives_more:
   other: " - .. (to see more results run `state bundles search {{.V0}}`)"
+err_lock_version_invalid:
+  other: "The locked version '{{.V0}}' could not be verified, are you sure it's valid?"
