--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1631,3 +1631,5 @@ bundle_ingredient_alternatives_more:
   other: " - .. (to see more results run `state bundles search {{.V0}}`)"
 err_lock_version_invalid:
   other: "The locked version '{{.V0}}' could not be verified, are you sure it's valid?"
+config_get_error:
+  other: Failed to read configuration.
