Update secret text to match mocks Will work now with updates to GetCroppedText

--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -631,9 +631,9 @@ secrets_header_description:
 secrets_header_usage:
   other: Usage
 secrets_row_value_set:
-  other: "[SUCCESS]Defined[/RESET]"
+  other: "[SUCCESS]✔ Defined[/RESET]"
 secrets_row_value_unset:
-  other: "[ERROR]Not defined[/RESET]"
+  other: "[ERROR]× Not defined[/RESET]"
 secrets_description_unset:
   other: "[DISABLED]Not provided.[/RESET]"
 pull_not_updated:
