--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1633,3 +1633,10 @@ err_lock_version_invalid:
   other: "The locked version '{{.V0}}' could not be verified, are you sure it's valid?"
 config_get_error:
   other: Failed to read configuration.
+err_activate_platfrom_alternate_branches:
+  other: |
+    There are no valid dependencies for your platform in branch [ACTIONABLE]`{{.V0}}`[/RESET], perhaps you could try one of the alternate branches on your project:
+
+     - {{.V1}}
+
+    Type [ACTIONABLE]`state branch switch <NAME>`[/RESET] to switch to a different branch.
