--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1633,3 +1633,7 @@ err_lock_version_invalid:
   other: "The locked version '{{.V0}}' could not be verified, are you sure it's valid?"
 config_get_error:
   other: Failed to read configuration.
+cve_needs_authentication:
+  other: You need to be authenticated in order to access vulnerability information about your project.
+auth_tip:
+  other: Run `state auth` to authenticate.
