Apply more suggestion from review
Create and use locale entry for project fetch errors
Update AddBranch return type
Sort branches
Update integration tests

--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1638,3 +1638,5 @@ err_activate_platfrom_alternate_branches:
      - {{.V1}}
 
     Type [ACTIONABLE]`state branch switch <NAME>`[/RESET] to switch to a different branch.
+err_fetch_project:
+  other: "Could not fetch details for project: {{.V0}}"
