--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1350,7 +1350,7 @@ auto_update_permission_err:
     To manually update, run 'state update' as a privileged user.
     If you want the state tool to auto-update, please re-install it in a user-writable directory.
 forward_version:
-  other: "Using locked state tool version: [NOTICE]{{.V0}}[/RESET]."
+  other: "Using locked state tool version: [NOTICE]{{.V0}}[/RESET].\n"
 err_project_env_file_not_exist:
   other: |
     Your activated environment appears to have been corrupted because the activestate.yaml cannot be found anymore.
