--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -217,6 +217,8 @@ logged_out:
   other: You have been logged out
 signup_success:
   other: Your account has been registered and a confirmation email has been sent to [NOTICE]{{.Email}}[/RESET], your account will have limited permissions until you confirm it.
+signup_failure:
+  other: Signup was not successful.
 login_cancelled:
   other: Authentication Cancelled
 login_err_output:
