--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1661,3 +1661,5 @@ headless_notify:
     Any changes you make are local only and will not be saved the platform. Visit: [ACTIONABLE]{{.V0}}[/RESET] to create a platform project from this commit.
 
     For more information, including how to merge these changes into an existing project, visit: [ACTIONABLE]{{.V1}}[/RESET].
+browser_fallback:
+  other: "Could not open {{.V0}} in your browser.\nYou can copy and paste the following URL manually in the address line of your browser:\n[NOTICE]{{.V1}}[/RESET]"
