improve error reporting

--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1648,3 +1648,5 @@ artifact_progress_step_unpack:
   other: Unpacking
 artifact_progress_step_install:
   other: Installing
+artifact_setup_failed:
+  other: Failed to install artifact {{.V0}} ({{.V1}})
